--- a/bio8.html
+++ b/bio8.html
@@ -81,7 +81,7 @@
                     <a target="_blank" href="https://drive.google.com/drive/folders/1FlfAuJHlU6XZ8-Ua5twBwUlC_Js8qmIb?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1ivnX4q-9Qvh9mteY2clPiIbIlZWB4-Tm?usp=sharing"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=r02LN-_0EvE&list=PLFb27aoRQJisEYJCKll_9fPiJCwLcY2m9"><button type="button" class="btn btn-outline-success btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
